Fixed Jacoco implementation